# littletools

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  RWSeparate.hpp  docker_build.sh  docker_run.me  docker_run.sh  main.cpp  nohup.out  rm_tr.sh  run_d.sh  toolcompose.cpp  tooltest.cpp  trimule.cpp
asiostudy/: CMakeLists.txt  (+1 more)
call_python/: CMakeLists.txt  main.cpp  python_monitor.hpp  python_wrap.hpp
call_python/config/: monitor_config.json
call_python/python/: fun_base.py  monitor_cpu.py  monitor_disk.py  monitor_io.py  monitor_mem.py  monitor_temperature.py  test.py
dbstruct/dbstruct/: CMakeLists.txt  Makefile  cmake_install.cmake  dbstruct.cpp  dbstruct.h
dialogmanager/: CMakeLists.txt  Dockerfile  dialogmanager.cpp  dmthreadpool.hpp  docker_build.sh  docker_run.sh  global.cpp  global.h  log.h  run_dialogmanager.sh
dialogmanager/callback_function/: qainfo_callback.hpp
dialogmanager/course_manager/: CMakeLists.txt  course_manager.cpp  course_manager.h
dialogmanager/dboperate/: dboperate.hpp
dialogmanager/net_interface/: CMakeLists.txt  generate_response.hpp  net_interface.cpp  net_interface.h
dialogmanager/score_manager/: AppConfig.cpp  AppConfig.h  CMakeLists.txt  TextCompare.cpp  TextCompare.h  TextSimilarity.cpp  TextSimilarity.h  score_manager.cpp  score_manager.h
dialogmanager/session_manager/: CMakeLists.txt  session_manager.cpp  session_manager.h
dialogmanager/speech_service/: CMakeLists.txt  SpeecService.cpp  SpeecService.h  speechRestfulAsr.cpp  speechRestfulAsr.h  speechSynthesizer.cpp  speechSynthesizer.h  speechTranscriber.cpp  speechTranscriber.h
dialogmanger/: CMakeLists.txt  dialogmanger.cpp  dmthreadpool.hpp  global.h
dialogmanger/callback_function/: qainfo_callback.hpp
dialogmanger/course_manager/: course_manager.cpp  course_manager.h
dialogmanger/dboperate/: dboperate.hpp
dialogmanger/net_interface/: generate_response.hpp
dialogmanger/network/: CMakeLists.txt  generate_response.hpp  net_interface.cpp  net_interface.h
dialogmanger/session_manager/: session_manager.cpp  session_manager.h
examples/: CMakeLists.txt  RUDP_large_msg_client.cpp  RUDP_large_msg_server.cpp  concurrentqueue.cpp  coroutine_test.cpp  lockqueue.cpp  lrucache.cpp  network.cpp  objectpool.cpp  pickleader.cpp  rbtreewrap.cpp  reliable_udp.cpp  serialize.cpp  shm_queue.cpp  simple_list.cpp  simple_serialize.cpp  simplepoll.cpp  test.cpp  threadpool.cpp  timermanager.cpp  tooltest.cpp
http_download/: CMakeLists.txt  README.md  create_file.py
http_download/src/: global.hpp  main.cpp
http_download/src/ftp/: ftp_download.hpp
http_download/src/http/: http_download.hpp
http_download/src/manager/: download_manager.hpp
http_download/src/workpool/: simple_workpool.hpp
kafka/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  simplewrapkafka.cpp  simplewrapkafka.h
originaltest/: CMakeLists.txt  tooltest.cpp
queue/: CMakeLists.txt  Makefile  cmake_install.cmake  ringqueue.hpp  rte_ring.cpp  rte_ring.h  test.cpp  test.h  threadsafecontainer.hpp
redispool/: CMakeLists.txt  redisclient.cpp  redisclient.h
ros2_sample/Gazebo_test/: CMakeLists.txt  package.xml
ros2_sample/Gazebo_test/launch/: mycar.launch.py  urdf.launch.py
ros2_sample/Gazebo_test/urdf/: move.xacro  my_base.xacro  my_camera.xacro  my_laser.xacro  mycar.urdf  robot_car.xacro
ros2_sample/Gazebo_test/worlds/: world.sdf
ros2_sample/bt_test/: CMakeLists.txt  package.xml
ros2_sample/bt_test/config/: bt_test.xml
ros2_sample/bt_test/src/: bt_test.cpp
ros2_sample/common_utils/: CMakeLists.txt  package.xml
ros2_sample/files_upload_mgr/: CMakeLists.txt  package.xml
ros2_sample/files_upload_mgr/config/: config.json  logging.properties
ros2_sample/files_upload_mgr/launch/: files_upload_mgr.launch.py
ros2_sample/files_upload_mgr/src/: main.cpp
ros2_sample/interface_pkg/: CMakeLists.txt
ros2_sample/interface_pkg/msg/: SampleMsg.msg
ros2_sample/iot/: CMakeLists.txt  package.xml
ros2_sample/iot/src/: iot_manager.cpp  main.cpp
ros2_sample/magic_enum/: CMakeLists.txt  package.xml
ros2_sample/ormpp_example_pkg/: CMakeLists.txt  package.xml
ros2_sample/ormpp_example_pkg/src/: advanced_ormpp_example.cpp  ormpp_example.cpp
ros2_sample/sample_client/: CMakeLists.txt  package.xml
ros2_sample/sample_client/launch/: two_client.launch.py
ros2_sample/sample_client/src/: main.cpp
ros2_sample/sample_client_component/: CMakeLists.txt  package.xml
ros2_sample/sample_client_component/launch/: client_component.launch.py
ros2_sample/sample_client_component/src/: sample_client_component.cpp
run_trimule/: CMakeLists.txt  README.md  run_littletools.sh  trimule.cpp
samples/: CMakeLists.txt  RUDP_large_msg_server.cpp  io_uring_example.cpp  io_uring_example.txt  sample_network_receiver.cpp  sample_network_sender.cpp  shm.cpp  write_file.cpp
settingParser/: CMakeLists.txt  Makefile  cmake_install.cmake  settingParser.cpp  settingParser.h
trimule/: CMakeLists.txt  Dockerfile  Makefile  cmake_install.cmake  docker_build.sh  docker_run.sh  global.hpp  synicmanager.hpp  test_kafka  trimule.cpp
trimule/conf/: config.json
trimule/dbstruct/: CMakeLists.txt  Makefile  cmake_install.cmake
trimule/dbstruct/dbstruct/: Makefile  cmake_install.cmake
trimule/dbstruct/dbstructtest/: CMakeLists.txt  dbstruct.cpp  dbstruct.h
trimule/httpclient/: CMakeLists.txt  HttpRequester.cpp  HttpRequester.h
trimule/kafka/: Makefile
trimule/messageprocess/: CMakeLists.txt  dbupdate.cpp  dbupdate.h  messageprocess.cpp  messageprocess.h  messageprocessstruct.hpp
trimule/queue/: cmake_install.cmake
trimule/redispool/: CMakeLists.txt  all_example.cpp  redisclient.cpp  redisclient.h
trimule/settingParser/: settingParser.cpp  settingParser.h
trimule/settingparser/: CMakeLists.txt  settingparser.cpp  settingparser.h
trimule/tinyxml2/: CMakeLists.txt  tinyxml2.h
uring_write/: CMakeLists.txt  main.cpp  uring_write_file.cpp  uring_write_file.h
yalantingstudy/: CMakeLists.txt  core_rpc_client.cpp  core_rpc_server.cpp  lantingstudy.cpp  testhun.hpp
(+457 files in other folders)
