<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>files_upload_mgr</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="250316792@qq.com">thomas</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>app_interfaces</depend>
  <depend>ament_index_cpp</depend>
  <depend>common_utils</depend>
  <depend>yjhlog</depend>
  <depend>node_to_iot</depend>
  <depend>magic_enum</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
